# static-thingy-demo

./: Cargo.toml  README.md
p0-shared/: Cargo.toml
p0-shared/src/: lib.rs
p1-block/: Cargo.toml
p1-block/src/: lib.rs
p2-tx/: Cargo.toml
p2-tx/src/: lib.rs
p3-op/: Cargo.toml
p3-op/src/: lib.rs
tracer/: Cargo.toml
tracer/src/: lib.rs
usage/: Cargo.toml
usage/src/: main.rs
