[package]
name = "usage"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { package = "p0-shared", path = "../p0-shared" }
tracer = { path = "../tracer" }
block = { package = "p1-block", path = "../p1-block" }
tx = { package = "p2-tx", path = "../p2-tx" }
op = { package = "p3-op", path = "../p3-op" }
